Next iteration of Spring Boot 3 upgrade
- Use Spring's OidcUserInfo instead of mitre UserInfo
- Adapt Spring Security Oauth2 oidc login web security configuration
- Use Spring Security Oauth2 client identity provider configurations
- Adapt Granted Authorities extraction