@@ -1,30 +1,33 @@
 package net.openid.conformance.security;
 
-import com.google.common.collect.ImmutableSet;
-import net.openid.conformance.support.mitre.compat.oidc.DefaultUserInfo;
-import net.openid.conformance.support.mitre.compat.oidc.UserInfo;
-import net.openid.conformance.support.mitre.compat.spring.OIDCAuthenticationToken;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.stereotype.Component;
-import org.springframework.web.filter.GenericFilterBean;
-
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.ServletRequest;
 import jakarta.servlet.ServletResponse;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
+import org.springframework.security.oauth2.core.oidc.OidcIdToken;
+import org.springframework.security.oauth2.core.oidc.OidcUserInfo;
+import org.springframework.security.oauth2.core.oidc.user.DefaultOidcUser;
+import org.springframework.stereotype.Component;
+import org.springframework.web.filter.GenericFilterBean;
+
 import java.io.IOException;
+import java.time.Instant;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.Set;
 
 /**
  * DummyUserFilter is used to inject an authenticated <code>OIDCAuthenticationToken</code>
  * into the Security Context. This should <b>NEVER</b> be used in production
- *
+ * <p>
  * The point of this is to fake out the OIDC authentication mechanism of Spring into thinkin a user has already logged
  * in, so that a developer doesn't have to keep logging in every time they want to test a code change.
- *
+ * <p>
  * To enable this, add the filter into the <code>HttpSecurity</code> object in your
  * <code>WebSecurityConfigurerAdapter</code> with:
  *
@@ -45,17 +48,28 @@ public class DummyUserFilter extends GenericFilterBean {
 	@Override
 	public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
 		if (devmode) {
-			UserInfo info = new DefaultUserInfo();
-			String email = makeDummyUserAdminInDevMode ? "DEVMODE@developer.com" : "DEVMODE_NO_ADMIN@developer.com";
-			info.setEmail(email);
-			info.setName("DEV MODE");
-			info.setSub(sub);
 
 			Set<GrantedAuthority> authorities = makeDummyUserAdminInDevMode
-				? ImmutableSet.of(new SimpleGrantedAuthority("ROLE_USER"), new SimpleGrantedAuthority("ROLE_ADMIN"))
-				: ImmutableSet.of(new SimpleGrantedAuthority("ROLE_USER"));
+				? Set.of(new SimpleGrantedAuthority("ROLE_USER"), new SimpleGrantedAuthority("ROLE_ADMIN"))
+				: Set.of(new SimpleGrantedAuthority("ROLE_USER"));
 
-			SecurityContextHolder.getContext().setAuthentication(new OIDCAuthenticationToken(sub, issuer, info, authorities, null, null, null));
+			Map<String, Object> claims = new HashMap<>();
+			String email = makeDummyUserAdminInDevMode ? "DEVMODE@developer.com" : "DEVMODE_NO_ADMIN@developer.com";
+			claims.put("email", email);
+			claims.put("name", "DEV MODE");
+			claims.put("given_name", "DEV");
+			claims.put("family_name", "MODE");
+			claims.put("sub", sub);
+			claims.put("iss", issuer);
+
+			OidcIdToken dummyIdToken = new OidcIdToken("dummy", Instant.now(), null, claims);
+
+			OidcUserInfo dummyUserInfo = new OidcUserInfo(claims);
+
+			DefaultOidcUser user = new DefaultOidcUser(authorities, dummyIdToken, dummyUserInfo, "sub");
+
+			OAuth2AuthenticationToken oauth2AuthToken = new OAuth2AuthenticationToken(user, authorities, "dummy");
+			SecurityContextHolder.getContext().setAuthentication(oauth2AuthToken);
 		}
 		chain.doFilter(request, response);
 	}
